# ariel-os

./: Cargo.toml  README.md  ariel-os-cargo.toml  bindings_draft.md  laze-project.yml  renovate.json
.github/: dependabot.yml
.github/workflows/: build-cache.yml  build-deploy-docs.yml  build.yml  main.yml  pr-title.yml
book/src/: logging.md  multithreading.md  support_matrix.html
book/src/boards/: makerdiary-nrf52840-mdk-usb-dongle.md
book/src/chips/: nrf52840.md
doc/: support_matrix.yml
examples/: laze.yml
examples/bindings-comp/: Cargo.toml  laze.yml  payload_component_model.cwasm  payload_component_model.rs  payload_handwritten.cwasm  payload_handwritten.rs
examples/bindings-comp/src/: handwritten.rs  main.rs  with_component_model.rs
examples/bindings-comp/wit/: rng_component_model.wit
examples/component-udp/: Cargo.toml  README.md  laze.yml  udp_example.cwasm  udp_example.rs
examples/component-udp/src/: main.rs
examples/gpio-wasm-explore/: Cargo.toml  blinky-test.cwasm  laze.yml  wasm_payload.cwasm
examples/gpio-wasm-explore/src/: main.rs  pins.rs
examples/sensors-debug/: Cargo.toml
examples/sensors-debug/src/: pins.rs  sensors.rs
examples/wasm-bindings/: Cargo.toml  laze.yml
examples/wasm-bindings-async/: Cargo.toml  README.md  bindings-async.cwasm  laze.yml  udp-example-sync.cwasm
examples/wasm-bindings-async/src/: main.rs
examples/wasm-bindings-async/wit/: full-example.wit
examples/wasm-bindings/src/: main.rs
examples/wasm-bindings/wit/: full-example.wit
examples/wasm-coap-interop/: Cargo.toml  README.md  coap-client-demo.cwasm  coap-server-impl.cwasm  laze.yml
examples/wasm-coap-interop/src/: main.rs
examples/wasm-coap-interop/wit/: coap-server-example.wit
examples/wasm-udp-interop/: Cargo.toml  README.md  laze.yml  udp-interop-component.cwasm  udp-interop-example.cwasm  udp-interop-example.rs
examples/wasm-udp-interop/src/: main.rs
examples/wasm-udp-interop/wit/: udp.wit
examples/wasmi/: Cargo.toml  README.md  laze.yml  low_mem_example.wasm
examples/wasmi-example/: Cargo.toml  README.md  laze.yml
examples/wasmi-example/src/: main.rs
examples/wasmi-explore/: Cargo.toml  README.md  laze.yml  payload.wasm  payload.wat  payload_src.rs
examples/wasmi-explore/src/: main.rs
examples/wasmi-over-udp/: Cargo.toml  README.md  ex.wat  laze.yml  other_ex.wat  send_files.rs
examples/wasmi-over-udp/src/: main.rs
examples/wasmi/src/: main.rs
scripts/: compile_component.rs
src/ariel-os/: Cargo.toml
src/ariel-os-alloc/: Cargo.toml
src/ariel-os-alloc/src/: lib.rs
src/ariel-os-bindings/: Cargo.toml
src/ariel-os-bindings/src/: lib.rs
src/ariel-os-bindings/src/wasm/: coap_server.rs  log.rs  mod.rs  rng.rs  time.rs  udp.rs
src/ariel-os-boards/: laze.yml
src/ariel-os-debug-log/src/: lib.rs
src/ariel-os-esp/: Cargo.toml
src/ariel-os-esp/src/: lib.rs
src/ariel-os-hal/: Cargo.toml
src/ariel-os-log/: Cargo.toml
src/ariel-os-log/src/: lib.rs
src/ariel-os-macros/: Cargo.toml
src/sensors/ariel-os-sensor-aht20/src/: i2c.rs  lib.rs
supply-chain/: audits.toml  config.toml
