[package]
name = "component-udp"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["alloc", "time", "udp", "threading"]}
ariel-os-boards = { path = "../../src/ariel-os-boards" }
defmt = { workspace = true }
wasmtime = { workspace = true }

embassy-sync = { workspace = true, default-features = false }
embassy-futures = {workspace = true, default-features = false }

lock_api = {version = "0.4.12", default-features = false, features = ["arc_lock"]}
[features]
