[package]
name = "wasm-bindings"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["alloc", "time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
ariel-os-bindings = { path = "../../src/ariel-os-bindings", features = ["udp", "log"] }

wasmtime = { workspace = true, default-features = false, features = ["runtime", "pulley", "component-model", "async"] }
