[package]
name = "wasm-coap-interop"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["coap", "alloc"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

embedded-nal-coap = { workspace = true }
coap-request = "0.2.0-alpha.2"
coap-request-implementations = "0.1.0-alpha.4"
coap-handler-implementations = "0.5.0"
coap-message = "0.3.2"
coap-handler = "0.2.0"
coap-numbers = "0.2.2"
coap-message-implementations = "0.1.8"
coap-message-utils = "0.3.0"


wasmtime = { workspace = true, default-features = false, features = ["pulley", "runtime", "component-model"]}