[package]
name = "wasmi-over-udp"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["alloc", "udp"]}
ariel-os-boards = { path = "../../src/ariel-os-boards" }
defmt = { workspace = true }

wasmi = { version = "0.47", default-features = false }

