[package]
name = "ariel-os-bindings"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ariel-os-debug = { workspace = true, features = ["defmt"], optional = true }
ariel-os-random = { workspace = true, optional = true }
ariel-os-embassy = { workspace = true, optional = true }
ariel-os-alloc = { workspace = true }
rand_core = { workspace = true, optional = true }

wasmtime = { workspace = true, default-features = false, features = ["component-model"]}
embassy-futures = { version = "0.1.1", default-features = false, optional = true }

[lints]
workspace = true

[features]
rng = ["dep:rand_core", "dep:ariel-os-random"]
udp = ["ariel-os-embassy/udp", "ariel-os-embassy/net", "dep:embassy-futures"]
time = ["ariel-os-embassy/time", "dep:embassy-futures"]
log = ["dep:ariel-os-debug"]
async = ["wasmtime/async"]