[package]
name = "ariel-os-bindings"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ariel-os-debug = { workspace = true, features = ["defmt"], optional = true }
ariel-os-random = { workspace = true, optional = true }
ariel-os-embassy = { workspace = true, optional = true }
ariel-os-alloc = { workspace = true }
rand_core = { workspace = true, optional = true }

ariel-os-coap = { workspace = true, optional = true, default-features = false }
coap-message = { version = "0.3.2", optional = true }
coap-message-demos = { version = "0.4.0", default-features = false, optional = true }
coap-handler = { version = "0.2.0", optional = true }
coap-handler-implementations = { version = "0.5.0", optional = true }


wasmtime = { workspace = true, default-features = false, features = ["component-model"]}
embassy-futures = { version = "0.1.1", default-features = false, optional = true }

[lints]
workspace = true

[features]
rng = ["dep:rand_core", "dep:ariel-os-random"]
udp = ["ariel-os-embassy/udp", "ariel-os-embassy/net", "dep:embassy-futures"]
time = ["ariel-os-embassy/time", "dep:embassy-futures"]
log = ["dep:ariel-os-debug"]
async = ["wasmtime/async"]
coap-server = [
    "dep:coap-message", "dep:coap-handler", "dep:coap-handler-implementations", "coap-message-demos", "ariel-os-coap/coap-server",
]
default = ["rng", "time", "log", "async", "coap-server"]